--- a/PokedexWeb/PokedexWeb/Pages/Views/Registro.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Registro.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model PokedexWeb.Pages.Views.Pokemon.RegistroModel
+@model RegistroModel
 @{
     <main class="container">
         <div class="d-flex align-items-center">
