--- a/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Views/Pokemon/Index">Pokedex</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Views/Enfermeria/Index">Enfermeria</a>
                         </li>
                         
                     </ul>
@@ -48,7 +48,7 @@
                                     </a>
                                     <ul class="dropdown-menu text-small">
                                         <li><a class="dropdown-item" href="/Views/Usuario/Equipo">Mis Pokemones</a></li>
-                                        <li><a class="dropdown-item" href="#">Mensajería</a></li>
+                                        <li><a class="dropdown-item" href="/Views/Usuario/Chat">Chats</a></li>
                                         <li><a class="dropdown-item" href="#">Perfil</a></li>
                                         <li><hr class="dropdown-divider"></li>
                                         <li><a class="dropdown-item" href="#">Salir</a></li>
