add pokemon view - prelim

--- a/PokedexWeb/PokedexWeb/Pages/Views/Pokemon/Index.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Pokemon/Index.cshtml
@@ -6,6 +6,7 @@
             <div class="col-lg-8 col-md-10 mx-auto">
 
                 <h1 class="text-center my-4">Pokedex</h1>
+                <a class="d-flex justify-content-end pb-3" href="/Views/Pokemon/Agregar"><button type="button" class="btn btn-primary">Agregar Pokemon</button></a>
 
                 <div class="row">
                     <div class="md-auto">
