--- a/PokedexWeb/PokedexWeb/Pages/Index.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">WebDex</h1>
+    <p>Consultar lista de <a href="/Pokemon/Index">Pokemon</a>.</p>
 </div>
