--- a/PokedexWeb/PokedexWeb/Pages/Views/Login.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Login.cshtml
@@ -2,11 +2,11 @@
 @model PokedexWeb.Pages.Views.LoginModel
 @{
 
-    <main id="login" class="container">
+    <main id="login" class="container mt-4">
         <div class="d-flex align-items-center">
             <div id="dialogbox" class="row">
                 <div class="col-10 p-3 mx-auto">
-                    <h1 class="mb-3">Iniciar Sesion</h1>
+                    <h1 class="text-center mb-4">Iniciar Sesion</h1>
                     <form class="m-2 needs-validation" method="post">
                         <div class="form-group text-start">
                             <label class="form-label text-start">Correo Electrónico</label>
