--- a/PokedexWeb/PokedexWeb/Pages/Views/Pokemon/Index.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Pokemon/Index.cshtml
@@ -60,6 +60,28 @@
                                             <a href="/Views/Pokemon/Eliminar"><i class="fa-solid fa-trash"></i></a>
                                         </td>
                                     </tr>
+                                    <tr>
+                                        <td>
+                                            <img class="text-center" style="display:block; margin:auto;" src="https://img.pokemondb.net/sprites/black-white/anim/normal/pikachu.gif" alt="Pikachu">
+                                        </td>
+                                        <td>025</td>
+                                        <td><a href="">Pikachu</a></td>
+                                        <td>
+                                            <p>
+                                                <span class="badge text-bg-success rounded-pill" id="electrico">Electrico</span>
+                                            </p>
+                                        </td>
+                                        <td>
+                                            <p>
+                                                <span class="badge text-bg-success rounded-pill" id="tierra">Tierra</span>
+                                            </p>
+                                        </td>
+                                        <td>6.0 kg</td>
+                                        <td>
+                                            <a href="/Views/Pokemon/Editar"><i class="fa-solid fa-pen"></i></a>
+                                            <a href="/Views/Pokemon/Eliminar"><i class="fa-solid fa-trash"></i></a>
+                                        </td>
+                                    </tr>
                                 </tbody>
                             </table>
                         </div>
