--- a/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Equipo.cshtml
+++ b/PokedexWeb/PokedexWeb/Pages/Views/Usuario/Equipo.cshtml
@@ -62,6 +62,7 @@
                                         </td>
                                         <td>
                                             <a class="mx-1" href=""><i class="fa-solid fa-plus"></i></a>
+                                            <a class="mx-1" href=""><i class="fa-solid fa-user-doctor"></i></a>
                                             <a class="mx-1" href="/Views/Pokemon/Editar"><i class="fa-solid fa-pen"></i></a>
                                             <a class="mx-1" href="/Views/Pokemon/Eliminar"><i class="fa-solid fa-trash"></i></a>
                                         </td>
